# SongSuro

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
songsuro/: models.py  preprocess.py  train.py
songsuro/autoencoder/: autoencoder.py  loss.py  models.py  quantizer.py  train.py
songsuro/autoencoder/decoder/: decoder_loss.py  discriminator.py  generator.py  utils.py
songsuro/autoencoder/encoder/: encoder.py  netmisc.py  vconv.py
songsuro/autoencoder/simple/: models.py  train.py
songsuro/autoencoder/vq/: residual_vq.py  vector_quantize.py
songsuro/condition/: model.py  prior_estimator.py
songsuro/condition/aligner/: duration_predictor.py  length_regulator.py
songsuro/condition/encoder/: fft.py  lyrics.py  melodyU.py  pre_trained_lyrics.py  style.py  timbre.py  trained_lyrics.py
songsuro/data/: module.py
songsuro/data/dataset/: aihub.py  aihub_legacy.py  aihub_lyrics_preprocess.py  aihub_modern.py
songsuro/data/loader/: base.py
songsuro/dataset/: autoencoder.py  base.py
songsuro/diffusion/: model.py  train.py
songsuro/encoder/: lyrics.py  melodyU.py  style.py  style_encoder.py  timbre.py
songsuro/evaluation/: lyrics_evaluator.py  melody_evaluator.py  metrics.py
songsuro/modules/TCSinger/: vq.py
songsuro/modules/commons/: conv.py  layers.py  leftpad_conv.py
songsuro/modules/fft/: attentions.py  encoder.py  layer_norm.py  layers.py  modules.py  relative_pos_encoding.py  sublayers.py
songsuro/utils/: g2p.py  util.py
tests/: util.py
tests/resources/: sample_lyrics.py
tests/resources/ai_hub_data_sample/: valid_grapheme.csv
tests/songsuro/: test_preprocess.py  test_songsuro_models.py  test_songsuro_train.py
tests/songsuro/autoencoder/: encoder.py  test_autoencoder.py  test_autoencoder_train.py  test_loss.py  test_models.py  test_quantizer.py
tests/songsuro/autoencoder/decoder/: test_decoder_loss.py  test_discriminator.py  test_generator.py  test_loss.py
tests/songsuro/autoencoder/encoder/: test_encoder.py
tests/songsuro/condition/: test_conditional_encoder_model.py  test_model.py  test_prior_estimator.py
tests/songsuro/condition/encoder/: test_fft_encoder.py  (+6 more)
tests/songsuro/diffusion/: test_model.py
tests/songsuro/encoder/: test_melodyU.py  test_style.py  test_timbre.py
tests/songsuro/evaluation/: test_lyrics_evaluator.py  test_melody_evaluator.py  test_metrics.py
tests/songsuro/utils/: test_g2p.py
(+22 files in other folders)
