[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "songsuro"
readme = "README.md"
license = { file = "LICENSE" }
description = "It keeps the song style, pitch, rhythm, and melody unchanged, but only the lyrics are swapped to your input lyrics."
requires-python = ">=3.10"
dependencies = [
    "amfm-decompy>=1.0.11",
    "einops>=0.8.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-env>=1.1.5",
    "pytest-xdist>=3.6.1",
    "ruff>=0.11.2",
    "setuptools>=78.0.2",
    "setuptools-scm>=8.2.0",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { file = ["songsuro/VERSION"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["songsuro*"]
exclude = ["tests"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["E722", "F821"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = ["B"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "tab"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
